--- a/EntornVGI/EntornVGI.vcxproj
+++ b/EntornVGI/EntornVGI.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="..\include\ImGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="..\include\ImGui\imgui_tables.cpp" />
     <ClCompile Include="..\include\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="..\src\coche.cpp" />
     <ClCompile Include="..\src\escena.cpp" />
     <ClCompile Include="..\src\glut_geometry.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -43,6 +44,7 @@
     <ClInclude Include="..\include\ImGui\imgui_internal.h" />
     <ClInclude Include="..\include\ImGui\imstb_rectpack.h" />
     <ClInclude Include="..\include\ImGui\imstb_textedit.h" />
+    <ClInclude Include="..\src\coche.h" />
     <ClInclude Include="..\src\constants.h" />
     <ClInclude Include="..\src\escena.h" />
     <ClInclude Include="..\src\glut_geometry.h" />
