--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-.vs/*
+# Visual Studio
+.vs/
+*.user
+*.suo
+
+# Build artifacts
+EntornVGI/x64/
+x64/
+bin/
+obj/
+
+# Debug files
+*.pdb
+*.idb
+*.tlog
+*.log
+
