--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ obj/
 /x64/Debug/EntornVGI.pdb
 /x64/Debug/EntornVGI.exe
 /x64/Debug/EntornVGI.exp
+/x64/Debug/EntornVGI.exe
+/x64/Debug/EntornVGI.exp
+/x64/Debug/EntornVGI.lib
+/x64/Debug/EntornVGI.pdb
+/x64/Debug/EntornVGI.exe
+/x64/Debug/EntornVGI.exp
+/x64/Debug/EntornVGI.lib
+/x64/Debug/EntornVGI.pdb
