--- a/EntornVGI/EntornVGI.vcxproj
+++ b/EntornVGI/EntornVGI.vcxproj
@@ -27,6 +27,8 @@
     <ClCompile Include="..\include\ImGui\imgui_tables.cpp" />
     <ClCompile Include="..\include\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="..\src\coche.cpp" />
+    <ClCompile Include="..\src\colocarObjeto.cpp" />
+    <ClCompile Include="..\src\zones.cpp" />
     <ClCompile Include="..\src\escena.cpp" />
     <ClCompile Include="..\src\glut_geometry.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -46,6 +48,8 @@
     <ClInclude Include="..\include\ImGui\imstb_textedit.h" />
     <ClInclude Include="..\src\coche.h" />
     <ClInclude Include="..\src\constants.h" />
+    <ClInclude Include="..\src\colocarObjeto.h" />
+    <ClInclude Include="..\src\zones.h" />
     <ClInclude Include="..\src\escena.h" />
     <ClInclude Include="..\src\glut_geometry.h" />
     <ClInclude Include="..\src\main.h" />
