--- a/EntornVGI/EntornVGI.vcxproj.filters
+++ b/EntornVGI/EntornVGI.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClCompile Include="..\src\coche.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\zones.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\colocarObjeto.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\constants.h">
@@ -120,6 +126,12 @@
       <Filter>Archivos de encabezado\ImGui</Filter>
     </ClInclude>
     <ClInclude Include="..\src\coche.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\zones.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\colocarObjeto.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
