--- a/EntornVGI/EntornVGI.vcxproj
+++ b/EntornVGI/EntornVGI.vcxproj
@@ -28,6 +28,14 @@
     <ClCompile Include="..\include\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="..\src\coche.cpp" />
     <ClCompile Include="..\src\colocarObjeto.cpp" />
+    <ClCompile Include="..\src\EndGame.cpp" />
+    <ClCompile Include="..\src\IMenuState.cpp" />
+    <ClCompile Include="..\src\MainMenu.cpp" />
+    <ClCompile Include="..\src\MenuController.cpp" />
+    <ClCompile Include="..\src\NewGame.cpp" />
+    <ClCompile Include="..\src\PauseMenu.cpp" />
+    <ClCompile Include="..\src\Playing.cpp" />
+    <ClCompile Include="..\src\quatern.cpp" />
     <ClCompile Include="..\src\zones.cpp" />
     <ClCompile Include="..\src\escena.cpp" />
     <ClCompile Include="..\src\glut_geometry.cpp" />
@@ -49,6 +57,15 @@
     <ClInclude Include="..\src\coche.h" />
     <ClInclude Include="..\src\constants.h" />
     <ClInclude Include="..\src\colocarObjeto.h" />
+    <ClInclude Include="..\src\EndGame.h" />
+    <ClInclude Include="..\src\GameContext.h" />
+    <ClInclude Include="..\src\IMenuState.h" />
+    <ClInclude Include="..\src\MainMenu.h" />
+    <ClInclude Include="..\src\MenuController.h" />
+    <ClInclude Include="..\src\NewGame.h" />
+    <ClInclude Include="..\src\PauseMenu.h" />
+    <ClInclude Include="..\src\Playing.h" />
+    <ClInclude Include="..\src\quatern.h" />
     <ClInclude Include="..\src\zones.h" />
     <ClInclude Include="..\src\escena.h" />
     <ClInclude Include="..\src\glut_geometry.h" />
