--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -108,6 +108,36 @@ Pos=279,316
 Size=816,400
 Collapsed=0
 
+[Window][GlobalOverlayBackground]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][MainMenuButtons]
+Pos=745,183
+Size=430,625
+Collapsed=0
+
+[Window][NewGameButtons]
+Pos=745,171
+Size=430,648
+Collapsed=0
+
+[Window][##TimerHUD]
+Pos=760,10
+Size=400,100
+Collapsed=0
+
+[Window][##HealthHUD]
+Pos=760,931
+Size=400,32
+Collapsed=0
+
+[Window][EndGameButtons]
+Pos=745,175
+Size=430,641
+Collapsed=0
+
 [Table][0x8DFA6E86,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
