--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -108,6 +108,41 @@ Pos=279,316
 Size=816,400
 Collapsed=0
 
+[Window][GlobalOverlayBackground]
+Pos=0,0
+Size=1920,1009
+Collapsed=0
+
+[Window][MainMenuButtons]
+Pos=745,192
+Size=430,625
+Collapsed=0
+
+[Window][NewGameButtons]
+Pos=745,180
+Size=430,648
+Collapsed=0
+
+[Window][##TimerHUD]
+Pos=760,10
+Size=400,100
+Collapsed=0
+
+[Window][##HealthHUD]
+Pos=760,949
+Size=400,32
+Collapsed=0
+
+[Window][PauseMenuButtons]
+Pos=745,274
+Size=430,461
+Collapsed=0
+
+[Window][EndGameButtons]
+Pos=745,184
+Size=430,641
+Collapsed=0
+
 [Table][0x8DFA6E86,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
