--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -110,16 +110,16 @@ Collapsed=0
 
 [Window][GlobalOverlayBackground]
 Pos=0,0
-Size=1920,991
+Size=1920,1009
 Collapsed=0
 
 [Window][MainMenuButtons]
-Pos=745,183
+Pos=745,192
 Size=430,625
 Collapsed=0
 
 [Window][NewGameButtons]
-Pos=745,171
+Pos=745,180
 Size=430,648
 Collapsed=0
 
@@ -129,13 +129,18 @@ Size=400,100
 Collapsed=0
 
 [Window][##HealthHUD]
-Pos=760,931
+Pos=760,949
 Size=400,32
 Collapsed=0
 
 [Window][EndGameButtons]
-Pos=745,175
+Pos=745,184
 Size=430,641
+Collapsed=0
+
+[Window][PauseMenuButtons]
+Pos=745,274
+Size=430,461
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
