--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -110,11 +110,11 @@ Collapsed=0
 
 [Window][GlobalOverlayBackground]
 Pos=0,0
-Size=1920,991
+Size=1920,1080
 Collapsed=0
 
 [Window][MainMenuButtons]
-Pos=745,183
+Pos=745,227
 Size=430,625
 Collapsed=0
 
@@ -136,6 +136,41 @@ Collapsed=0
 [Window][EndGameButtons]
 Pos=745,175
 Size=430,641
+Collapsed=0
+
+[Window][##VelocityHUD]
+Pos=20,871
+Size=400,100
+Collapsed=0
+
+[Window][Loading]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][##LoadingScreen]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][##LoadingStatic]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][##LoadingCool]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][##LoadingGimcana]
+Pos=0,0
+Size=1920,991
+Collapsed=0
+
+[Window][##LoadingGimcanaBG]
+Pos=0,0
+Size=1920,1080
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
