Menu carregant + Correcions

--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -119,8 +119,8 @@ Size=430,625
 Collapsed=0
 
 [Window][NewGameButtons]
-Pos=745,171
-Size=430,648
+Pos=745,208
+Size=430,664
 Collapsed=0
 
 [Window][##TimerHUD]
@@ -129,17 +129,17 @@ Size=400,100
 Collapsed=0
 
 [Window][##HealthHUD]
-Pos=760,931
+Pos=760,1020
 Size=400,32
 Collapsed=0
 
 [Window][EndGameButtons]
-Pos=745,175
-Size=430,641
+Pos=745,183
+Size=430,713
 Collapsed=0
 
 [Window][##VelocityHUD]
-Pos=20,871
+Pos=20,960
 Size=400,100
 Collapsed=0
 
@@ -171,6 +171,11 @@ Collapsed=0
 [Window][##LoadingGimcanaBG]
 Pos=0,0
 Size=1920,1080
+Collapsed=0
+
+[Window][PauseMenuButtons]
+Pos=745,303
+Size=430,473
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
