--- a/x64/Release/imgui.ini
+++ b/x64/Release/imgui.ini
@@ -13,3 +13,43 @@ Pos=87,433
 Size=550,680
 Collapsed=0
 
+[Window][##LoadingGimcanaBG]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][GlobalOverlayBackground]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][MainMenuButtons]
+Pos=745,227
+Size=430,625
+Collapsed=0
+
+[Window][NewGameButtons]
+Pos=745,208
+Size=430,664
+Collapsed=0
+
+[Window][##TimerHUD]
+Pos=760,10
+Size=400,100
+Collapsed=0
+
+[Window][##HealthHUD]
+Pos=760,1020
+Size=400,32
+Collapsed=0
+
+[Window][##VelocityHUD]
+Pos=20,960
+Size=400,100
+Collapsed=0
+
+[Window][EndGameButtons]
+Pos=745,183
+Size=430,713
+Collapsed=0
+
