--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -110,17 +110,17 @@ Collapsed=0
 
 [Window][GlobalOverlayBackground]
 Pos=0,0
-Size=1920,1009
+Size=1920,1080
 Collapsed=0
 
 [Window][MainMenuButtons]
-Pos=745,183
+Pos=745,227
 Size=430,625
 Collapsed=0
 
 [Window][NewGameButtons]
-Pos=745,171
-Size=430,648
+Pos=745,208
+Size=430,664
 Collapsed=0
 
 [Window][##TimerHUD]
@@ -129,18 +129,28 @@ Size=400,100
 Collapsed=0
 
 [Window][##HealthHUD]
-Pos=760,931
+Pos=760,1020
 Size=400,32
 Collapsed=0
 
 [Window][EndGameButtons]
-Pos=745,175
+Pos=745,184
 Size=430,641
 Collapsed=0
 
 [Window][PauseMenuButtons]
-Pos=745,274
-Size=430,461
+Pos=745,303
+Size=430,473
+Collapsed=0
+
+[Window][##LoadingGimcanaBG]
+Pos=0,0
+Size=1920,1080
+Collapsed=0
+
+[Window][##VelocityHUD]
+Pos=20,960
+Size=400,100
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
