--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -124,18 +124,18 @@ Size=430,664
 Collapsed=0
 
 [Window][##TimerHUD]
-Pos=760,10
+Pos=-200,10
 Size=400,100
 Collapsed=0
 
 [Window][##HealthHUD]
-Pos=760,1020
+Pos=-200,-60
 Size=400,32
 Collapsed=0
 
 [Window][EndGameButtons]
-Pos=745,184
-Size=430,641
+Pos=745,183
+Size=430,713
 Collapsed=0
 
 [Window][PauseMenuButtons]
@@ -149,7 +149,7 @@ Size=1920,1080
 Collapsed=0
 
 [Window][##VelocityHUD]
-Pos=20,960
+Pos=20,-120
 Size=400,100
 Collapsed=0
 
