--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -153,6 +153,11 @@ Pos=20,960
 Size=400,100
 Collapsed=0
 
+[Window][ControlsWindow]
+Pos=210,65
+Size=1500,950
+Collapsed=0
+
 [Table][0x8DFA6E86,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
