--- a/EntornVGI/EntornVGI.vcxproj
+++ b/EntornVGI/EntornVGI.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="..\src\coche.cpp" />
     <ClCompile Include="..\src\colocarObjeto.cpp" />
     <ClCompile Include="..\src\Controls.cpp" />
+    <ClCompile Include="..\src\Credits.cpp" />
     <ClCompile Include="..\src\EndGame.cpp" />
     <ClCompile Include="..\src\IMenuState.cpp" />
     <ClCompile Include="..\src\MainMenu.cpp" />
@@ -59,6 +60,7 @@
     <ClInclude Include="..\src\constants.h" />
     <ClInclude Include="..\src\colocarObjeto.h" />
     <ClInclude Include="..\src\Controls.h" />
+    <ClInclude Include="..\src\Credits.h" />
     <ClInclude Include="..\src\EndGame.h" />
     <ClInclude Include="..\src\GameContext.h" />
     <ClInclude Include="..\src\IMenuState.h" />
