--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -158,6 +158,11 @@ Pos=210,65
 Size=1500,950
 Collapsed=0
 
+[Window][CreditsWindow]
+Pos=460,65
+Size=1000,950
+Collapsed=0
+
 [Table][0x8DFA6E86,2]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
