Menú de gràcies + correcions

--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -119,8 +119,8 @@ Size=430,625
 Collapsed=0
 
 [Window][NewGameButtons]
-Pos=745,208
-Size=430,664
+Pos=745,104
+Size=430,871
 Collapsed=0
 
 [Window][##TimerHUD]
@@ -161,6 +161,11 @@ Collapsed=0
 [Window][CreditsWindow]
 Pos=460,65
 Size=1000,950
+Collapsed=0
+
+[Window][##ExitScreenBG]
+Pos=0,0
+Size=1920,1080
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
