Añadido indicador de que el freno de mano esta puesto y se puede quitar con la P o flecha derecha

--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
-Collapsed=0
+Collapsed=1
 
 [Window][Example: Console]
 Pos=60,60
@@ -166,6 +166,11 @@ Collapsed=0
 [Window][##ExitScreenBG]
 Pos=0,0
 Size=1920,1080
+Collapsed=0
+
+[Window][##HandbrakeHUD]
+Pos=1150,940
+Size=750,120
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
