--- a/EntornVGI/imgui.ini
+++ b/EntornVGI/imgui.ini
@@ -134,8 +134,8 @@ Size=400,32
 Collapsed=0
 
 [Window][EndGameButtons]
-Pos=745,183
-Size=430,713
+Pos=745,279
+Size=430,521
 Collapsed=0
 
 [Window][PauseMenuButtons]
@@ -171,6 +171,11 @@ Collapsed=0
 [Window][##HandbrakeHUD]
 Pos=1150,940
 Size=750,120
+Collapsed=0
+
+[Window][##ResetPositionHUD]
+Pos=1366,20
+Size=534,40
 Collapsed=0
 
 [Table][0x8DFA6E86,2]
